demos/mobile-rendering-performance/examples/position-sticky/good/site/config/config.schepp.homeip.net.php
<?php
c::set('url', 'http://schepp.homeip.net/HTML5-WPO-Slides/demos/mobile-rendering-performance/examples/position-sticky/good/');
c::set('subfolder', 'HTML5-WPO-Slides/demos/mobile-rendering-performance/examples/position-sticky/good/');
c::set('environment', 'development');
?>