demos/mobile-rendering-performance/examples/position-sticky/bad/site/config/config.schepp.homeip.net.php
<?php
c::set('url', 'http://schepp.homeip.net/HTML5-WPO-Slides/demos/mobile-rendering-performance/examples/position-sticky/bad/');
c::set('subfolder', 'HTML5-WPO-Slides/demos/mobile-rendering-performance/examples/position-sticky/bad/');
c::set('environment', 'development');
?>